# DocChat

./: .env  .gitignore  LICENSE.md  README.md  app.py  pyproject.toml  requirements.txt
agents/: relevance_checker.py  research_agent.py  verification_agent.py  workflow.py
config/: constants.py  settings.py
document_processor/: file_handler.py
retriever/: builder.py
test/: test1.py
